@@ -3,6 +3,9 @@
 	* src/graph3d.c (get_arrow3d):  Fix typo introduced in 5.0 that caused
 	arrows defined by "from ... rto ..." to be mangled in 3D plots.
 
+	* src/graphics.c (attach_title_to_plot): Bad things happen if you try
+	to attach a title to the end point of a plot with no points (NODATA).
+
 2016-04-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* src/term.c:  Windows requires mode "wb" for pipe output, BSD requires
